njh-import/v1.5.548/package-build-evidence.md
# Final package pickup evidence

Version: `1.5.548`
Commit: `2ab1309dea9e96d25108fe8913ce792cdb6a3a1f`
Output directory: `/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f`
Source commit attestation: `source-commit-attestation.json`.
Representative task readiness: `recipient-config-merge-v2=pass, recipient-config-merge-original-v1=known_failure` (`representative-task-readiness.json` is authoritative).
These per-task statuses are not a general model-correctness claim; only a recipient-side semantic oracle receipt can establish a task result.

The archive password was loaded from `NJH_RELEASE_ARCHIVE_PASSWORD` and is not recorded here.

| Type | Artifact | SHA-256 | Bytes | Notes |
| --- | --- | --- | ---: | --- |
| package | `njh-cli-v1.5.548.7z` | `247e1a2eaa9d201ef272e1771cee03d78e772a58ccf97bc24e44055b5c597180` | 19,826,674 | built by package:final |
| package | `njh-gateway-v1.5.548.7z` | `32c9397a54ac7a3e3eb814fb71f19ed505b224be38c4ef6d1719940a96a1ca7a` | 89,133,283 | built by package:final |
| package | `njh-win-laptop-v1.5.548.7z` | `63f59192924381e258f7085a127802694f188c77f8c0ce11c158fb00e6066c60` | 1,923,904 | built by package:final |
| OCR engine | `njh-ocr-engine-v0.1.7z` | `d757baf48a4bde27f36a9c370f839a7baff805f91f7f3c20b994396f15e84359` | 70,124,611 | repacked from approved --ocr-engine-archive input with one flat server-import tar.gz |
| release note | `릴리스노트-v1.5.548.md` | `97d4077c8f4dddbceeae264c7d62fc2ea268ed41334b80dbbd0bc88e135d3cde` | 3,346 | copied from docs/사용자/릴리스노트-v1.5.548.md |

## Actual command output

### Build dist bundles

Command: `npm run build`
Exit status: `0`

stdout:
    
    > njh-cli@1.5.548 build
    > tsup
    
    CLI Building entry: {"njh-cli":"src/index.ts","njh-gateway":"gateway/db-gateway/index.ts","njh-embed-gateway":"gateway/embed-gateway/index.ts","njh-ocr-gateway":"gateway/ocr-gateway/index.ts","njh-match-gateway":"service/match-gateway/bundle-entry.ts"}
    CLI Using tsconfig: tsconfig.json
    CLI tsup v8.5.1
    CLI Using tsup config: /Users/nam64/njh-release-cut-0901b/tsup.config.ts
    CLI Target: node22
    CLI Cleaning output folder
    CJS Build start
    CJS dist/njh-ocr-gateway.js   44.42 KB
    CJS dist/njh-match-gateway.js 216.52 KB
    CJS dist/njh-embed-gateway.js 195.04 KB
    CJS dist/njh-gateway.js       444.65 KB
    CJS dist/njh-cli.js           7.51 MB
    CJS ⚡️ Build success in 6188ms

stderr:
    "spawn" and "spawnSync" are imported from external module "child_process" but never used in "dist/njh-embed-gateway.js".
    "StringDecoder" is imported from external module "string_decoder" but never used in "dist/njh-embed-gateway.js".
    "isDeepStrictEqual" is imported from external module "util" but never used in "dist/njh-gateway.js".
    "appendFileSync" is imported from external module "fs" but never used in "dist/njh-gateway.js".
    "createHmac" is imported from external module "crypto" but never used in "dist/njh-gateway.js".
    "dirname" is imported from external module "path" but never used in "dist/njh-gateway.js".

### Build C5 CLI archive

Command: `npx --no-install tsx scripts/build-c5-release-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-cli-v1.5.548.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.548","out":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-cli-v1.5.548.7z","distBannerVersion":"1.5.548","distBannerMatchesPackage":true,"distFreshnessChecked":true,"distMtimeMs":1788229067899.2976,"latestBuildInputPath":"package-lock.json","latestBuildInputMtimeMs":1788229034418.8838,"fileCount":455,"contentManifestSha256":"354fb3d690d8b69093b665d98f1f40d80df84bc335f92ae1ce77f1c1aa54055b","missingRequiredPaths":[],"skippedOptionalPaths":[],"representativeTaskReadiness":{"schema_version":3,"required_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"],"tasks":[{"contract_id":"recipient-config-merge-v2","status":"pass","eligible_models":["qwen2.5-coder:7b"],"evidence":{"execution":"completed","backend":"available","oracle":"passed","models":["qwen2.5-coder:7b"],"observations":["The 100 scored direct qwen2.5-coder:7b runs recorded 93 strict standalone-JSON passes and semantic correctness after bounded fence extraction in all 100 runs; this is a semantic 100/100 claim, not a raised formatting pass rate.","The fence appeared in 3 of 50 warm runs and 3 of 40 API-confirmed cold runs, so the formatting envelope was observed in both cohorts rather than attributed to cold start.","qwen2.5-coder:0.5b failed the same simplified task and is ineligible to back this contract."]},"measurement":{"report":"reports/recipient-target-node-simple-task-measurement-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":300,"strict_passes":285,"semantic_passes":300,"host_observations":[{"host":"om-baseline","hardware":"OM baseline","corporate_dev_node":false,"runs":100,"strict_passes":93,"semantic_passes":100},{"host":"mac-new-tb","hardware":"mac-new-tb remote development node","corporate_dev_node":false,"runs":100,"strict_passes":92,"semantic_passes":100},{"host":"oracle","hardware":"oracle remote development node","corporate_dev_node":false,"runs":100,"strict_passes":100,"semantic_passes":100}],"claims":{"semantic_correctness":{"scope":"machine-invariant","runs":300,"passes":300,"measuring_hosts":["om-baseline","mac-new-tb","oracle"]},"strict_contract":{"scope":"machine-dependent","runs":300,"passes":285,"measuring_hosts":["om-baseline","mac-new-tb","oracle"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"None of the three measured machines is a corporate dev node; semantic correctness was invariant across these observed machines, but the kit destination hardware remains unmeasured."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This declaration covers only the fixed recipient-config-merge-v2 two-level merge task.","Fence normalization changes only what is accepted as WELL-FORMED; it changes nothing about correctness. The measured claim is semantic correctness in 100 of 100 direct runs, not a raised formatting pass rate.","The task no longer tests arrays, null deletion, object recreation, retry semantics, or arbitrary multi-layer merge behavior.","The release build does not invoke a recipient inference backend or create a semantic oracle receipt.","Installation, backend reachability, and artifact existence do not establish task correctness."]},{"contract_id":"recipient-config-merge-original-v1","status":"known_failure","eligible_models":[],"evidence":{"execution":"completed","backend":"available","oracle":"failed","models":["qwen2.5-coder:7b","qwen3-coder:30b"],"observations":["The fresh repeated study completed 20 direct runs on each model, with semantic passes after fence extraction at 0 of 20 for qwen2.5-coder:7b and 0 of 20 for qwen3-coder:30b.","The 7B model repeatedly reordered the model array and retained or moved deleted fields; the 30B model retained retry.backoffMs in all 20 runs.","This measured limit is declared rather than hidden behind the passing simplified task; cdx_shell's deterministic execution path is a separate follow-up."]},"measurement":{"report":"reports/recipient-original-task-model-reliability-2026-08-11.json","rate_status":"UNSEEDED_EMPIRICAL_RATE","reproducibility":"NONDETERMINISTIC_SAMPLE","usage_policy":"OBSERVATION_ONLY_NO_GUARANTEE_OR_HOST_PREDICTION","runs":40,"strict_passes":0,"semantic_passes":0,"host_observations":[{"host":"om-original-study","hardware":"OM baseline","corporate_dev_node":false,"runs":40,"strict_passes":0,"semantic_passes":0}],"claims":{"semantic_correctness":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"},"strict_contract":{"scope":"machine-dependent","runs":40,"passes":0,"measuring_hosts":["om-original-study"],"delivery_host_measurement":"not_measured_here"}},"machine_coverage":{"corporate_dev_node_coverage":"none","caveat":"The original-task study was measured on the OM baseline only, which is not a corporate dev node; no cross-machine portability claim is made."}},"response_format_policy":{"accepted_well_formed_formats":["standalone-json","markdown-json-fence-stripped"],"fence_normalization_effect":"well-formedness-only","semantic_correctness_effect":"unchanged"},"required_before_usable_claim":"recipient-side-semantic-oracle-receipt","limitations":["This is the original multi-rule configuration merge with nested deletion, recreation, exact array ordering, and scalar precedence requirements.","The measured 0 of 40 semantic result is a known failure in this direct-model setup, not a claim that the deterministic utility path cannot solve the task.","No model is currently eligible to back a correctness claim for this task; the task remains listed so the simplified pass cannot hide this limit.","The report's 40-run denominator contains 20 qwen2.5-coder:7b runs and 20 qwen3-coder:30b runs.","A recipient must not infer general model quality or task readiness from the simplified task's separate pass."],"oracle_receipt":{"path":"reports/recipient-original-task-semantic-oracle-receipt-2026-08-14.json","sha256":"13a8acfb520228afd4b78ba0d9dbb7298dcb7cacbfd8e4e03e0df413669a693d","raw_response_evidence":{"path":"reports/recipient-original-task-model-reliability-2026-08-11.json","sha256":"31b343e2b18156cf6473a3dbab925cda5a4fc0228bbbcbaacfc01291863d8875"}}}],"measured_task_contracts":["recipient-config-merge-v2","recipient-config-merge-original-v1"]},"files":[".claude/agents/security-reviewer.md",".claude/agents/test-reviewer.md","assets/bin/README.md","assets/emoji-fonts/LICENSES.md","assets/emoji-fonts/NotoColorEmoji.ttf","assets/fonts/D2Coding-Ver1.3.2-20180524.ttf","assets/fonts/JetBrainsMono-Regular.ttf","assets/fonts/LICENSES.md","assets/fonts/NanumGothicCoding-2.5.ttf","assets/icons/LICENSES.md","assets/icons/njh-cli.ico","assets/icons/README.md","assets/ime/korean-ime-vscode-tips.md","assets/ime/README.md","assets/nerd-fonts/JetBrainsMonoNerdFont-Regular.ttf","assets/nerd-fonts/LICENSES.md","assets/terminal-config/gitbash-bashrc-snippet.sh","assets/terminal-config/intellij-terminal-settings.xml","assets/terminal-config/powershell-profile-snippet.ps1","assets/terminal-config/README.md","assets/terminal-config/vscode-settings-merge.json","assets/terminal-config/vscode-terminal-settings.json","assets/terminal-config/windows-terminal-profile.json","assets/terminal-config/windows-terminal-settings.json","assets/themes/dark.json","assets/themes/github-dark.json","assets/themes/github-light.json","assets/themes/high-contrast.json","assets/themes/light.json","assets/themes/monochrome.json","assets/themes/README.md","bundled-hooks/coding-quality/coding-quality-hooks.test.ts","bundled-hooks/coding-quality/README.md","bundled-hooks/coding-quality/scripts/check-old-string.mjs","bundled-hooks/coding-quality/scripts/convention-context.mjs","bundled-hooks/coding-quality/scripts/hook-io.mjs","bundled-hooks/coding-quality/scripts/lint-on-edit.mjs","bundled-hooks/coding-quality/scripts/test-on-complete.mjs","bundled-hooks/coding-quality/settings.example.json","bundled-skills/_shared/airflow-platform-footguns.md","bundled-skills/_shared/deep_validate.py","bundled-skills/_shared/expert_assist.mjs","bundled-skills/_shared/README.md","bundled-skills/airflow-closed-network-ops/profiles/low-spec-guarded.md","bundled-skills/airflow-closed-network-ops/references/01-runtime-and-deploy.md","bundled-skills/airflow-closed-network-ops/references/02-troubleshooting.md","bundled-skills/airflow-closed-network-ops/references/03-secrets-and-variables.md","bundled-skills/airflow-closed-network-ops/references/04-catalog-factory.md","bundled-skills/airflow-closed-network-ops/references/05-airflow26-ops.md","bundled-skills/airflow-closed-network-ops/references/06-current-bundle-map.md","bundled-skills/airflow-closed-network-ops/scripts/airflow_offline_runbook.mjs","bundled-skills/airflow-closed-network-ops/SKILL.md","bundled-skills/airflow-python-batch-dag-gen/profiles/low-spec-guarded.md","bundled-skills/airflow-python-batch-dag-gen/README.md","bundled-skills/airflow-python-batch-dag-gen/references/01-hard-rules.md","bundled-skills/airflow-python-batch-dag-gen/references/02-workflow.md","bundled-skills/airflow-python-batch-dag-gen/references/03-templates.md","bundled-skills/airflow-python-batch-dag-gen/references/04-validation.md","bundled-skills/airflow-python-batch-dag-gen/references/05-examples.md","bundled-skills/airflow-python-batch-dag-gen/references/06-conversion-invariants.md","bundled-skills/airflow-python-batch-dag-gen/references/07-manifest-factory-forms.md","bundled-skills/airflow-python-batch-dag-gen/references/rule-set.md","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/airflow_manifest_gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate_airflow_dag.mjs","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-airflow-python-batch-dag-gen.py","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.cmd","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.ps1","bundled-skills/airflow-python-batch-dag-gen/scripts/validate-dag-skill.sh","bundled-skills/airflow-python-batch-dag-gen/SKILL.md","bundled-skills/airflow-spring-batch-autogen/profiles/low-spec-guarded.md","bundled-skills/airflow-spring-batch-autogen/scripts/spring-batch-catalog-gen.mjs","bundled-skills/airflow-spring-batch-autogen/SKILL.md","bundled-skills/lowspec-tuning/profiles/low-spec-guarded.md","bundled-skills/lowspec-tuning/references/eval-ab-design.md","bundled-skills/lowspec-tuning/references/model-class-profiles.md","bundled-skills/lowspec-tuning/references/technique-matrix.md","bundled-skills/lowspec-tuning/SKILL.md","bundled-skills/mybatis-mapper-patterns/profiles/low-spec-guarded.md","bundled-skills/mybatis-mapper-patterns/scripts/mybatis_mapper.mjs","bundled-skills/mybatis-mapper-patterns/SKILL.md","bundled-skills/mybatis-query-performance/profiles/low-spec-guarded.md","bundled-skills/mybatis-query-performance/scripts/analyze_mapper_performance.mjs","bundled-skills/mybatis-query-performance/SKILL.md","bundled-skills/spring-boot/profiles/low-spec-guarded.md","bundled-skills/spring-boot/references/01-architecture.md","bundled-skills/spring-boot/references/02-security-data.md","bundled-skills/spring-boot/references/03-core-rules.md","bundled-skills/spring-boot/references/rule-set.md","bundled-skills/spring-boot/scripts/validate-spring-boot.py","bundled-skills/spring-boot/SKILL.md","bundled-skills/springboot-actuator/profiles/low-spec-guarded.md","bundled-skills/springboot-actuator/references/01-actuator-diagnostics.md","bundled-skills/springboot-actuator/SKILL.md","bundled-skills/springboot-actuator/templates/endpoint-checklist.md","bundled-skills/springboot-actuator/templates/metrics-request.json","bundled-skills/sql-gateway/profiles/low-spec-guarded.md","bundled-skills/sql-gateway/references/01-operations.md","bundled-skills/sql-gateway/scripts/sql_gateway_request.mjs","bundled-skills/sql-gateway/SKILL.md","bundled-skills/sql-gateway/tests/sql-gateway-request.test.mjs","bundled-skills/vue2/profiles/low-spec-guarded.md","bundled-skills/vue2/references/01-options-api-maintenance.md","bundled-skills/vue2/references/02-migration-readiness.md","bundled-skills/vue2/references/03-core-rules.md","bundled-skills/vue2/references/rule-set.md","bundled-skills/vue2/scripts/validate-vue2.py","bundled-skills/vue2/scripts/vue2_assist.mjs","bundled-skills/vue2/SKILL.md","bundled-skills/vue3-migration/fixtures/bom-removal/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/bom-removal/target-vue3.js","bundled-skills/vue3-migration/fixtures/context-pack-minimal/ReasonPanel.vue","bundled-skills/vue3-migration/fixtures/exported-event-bus/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/listener-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/producer-vue2.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-listener-vue3.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-producer-vue3.js","bundled-skills/vue3-migration/fixtures/exported-event-bus/target-vue3.js","bundled-skills/vue3-migration/fixtures/global-vue-filter/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/global-vue-filter/target-vue3.js","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-bound-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-component-pascal-is-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-host-tag-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-host-tag-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-order-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-bound-prop-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-false-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-numeric-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-literal-true-conditional-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-order-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-pascal-case-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-bind-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-literal-bound-transformable/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-static-shell-transformable/target-vue3.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/grid-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/dynamic-vue2.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/nested-grid-topology-change/target-vue3.vue","bundled-skills/vue3-migration/fixtures/unparseable-bootstrap/legacy-vue2.js","bundled-skills/vue3-migration/fixtures/unparseable-bootstrap/target-vue3.js","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-mixed/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-mixed/target-vue3.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-must-skip/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-must-skip/target-vue3.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-transformable/legacy-vue2.vue","bundled-skills/vue3-migration/fixtures/vuetify-fixed-renames-transformable/target-vue3.vue","bundled-skills/vue3-migration/profiles/low-spec-guarded.md","bundled-skills/vue3-migration/references/01-output-contract.md","bundled-skills/vue3-migration/references/02-mapping-rules.md","bundled-skills/vue3-migration/references/03-risk-and-validation.md","bundled-skills/vue3-migration/references/04-large-project-plan.md","bundled-skills/vue3-migration/references/05-vuetify2-to-3.md","bundled-skills/vue3-migration/references/06-router3-to-4.md","bundled-skills/vue3-migration/references/07-vuex-to-store.md","bundled-skills/vue3-migration/references/08-work-tier-boundaries.md","bundled-skills/vue3-migration/references/09-case-catalog.json","bundled-skills/vue3-migration/references/09-case-catalog.md","bundled-skills/vue3-migration/references/10-migration-depth-tiers.md","bundled-skills/vue3-migration/references/11-library-target-matrix.json","bundled-skills/vue3-migration/references/11-library-target-matrix.md","bundled-skills/vue3-migration/references/12-case-coverage-matrix.md","bundled-skills/vue3-migration/references/13-entry-inventory-routing.md","bundled-skills/vue3-migration/references/14-conversion-execution.md","bundled-skills/vue3-migration/references/15-scope-depth-lane-decisions.md","bundled-skills/vue3-migration/references/16-reference-recovery-index.md","bundled-skills/vue3-migration/references/17-project-file-class-coverage-matrix.md","bundled-skills/vue3-migration/references/rule-set.md","bundled-skills/vue3-migration/scripts/analyze_vue2_project.mjs","bundled-skills/vue3-migration/scripts/analyze_vue2_project.test.mjs","bundled-skills/vue3-migration/scripts/sanitize_source.mjs","bundled-skills/vue3-migration/scripts/sanitize_source.test.mjs","bundled-skills/vue3-migration/scripts/validate_vue3.mjs","bundled-skills/vue3-migration/scripts/validate_vue3.py","bundled-skills/vue3-migration/scripts/validate-vue3-migration.py","bundled-skills/vue3-migration/scripts/vue3_automation.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-gaps.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-grid-static-literal-bound.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-grid-static-shell.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod-vuetify-fixed-renames.test.mjs","bundled-skills/vue3-migration/scripts/vue3_codemod.mjs","bundled-skills/vue3-migration/scripts/vue3_context_pack.mjs","bundled-skills/vue3-migration/scripts/vue3_context_pack.test.mjs","bundled-skills/vue3-migration/scripts/vue3_file_class_skill_routing.mjs","bundled-skills/vue3-migration/scripts/vue3_inventory.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons-grid-topology-pair.test.mjs","bundled-skills/vue3-migration/scripts/vue3_lane_reasons.mjs","bundled-skills/vue3-migration/scripts/vue3_migrate.mjs","bundled-skills/vue3-migration/scripts/vue3_migrate.py","bundled-skills/vue3-migration/scripts/vue3_next.mjs","bundled-skills/vue3-migration/scripts/vue3_no_owner_rules.mjs","bundled-skills/vue3-migration/scripts/vue3_skillwire_report_2026-08-24.md","bundled-skills/vue3-migration/scripts/vue3_task_specs.mjs","bundled-skills/vue3-migration/skill-split.test.ts","bundled-skills/vue3-migration/SKILL.md","bundled-skills/vue3-migration/split-complete-prelude-render.test.ts","bundled-skills/vue3-migration/split-decision-boundary.test.ts","bundled-skills/vue3-migration/split-output-guidance.test.ts","bundled-skills/vue3-migration/split-question-answers.test.ts","bundled-skills/vue3-migration/split-reader-walk.test.ts","bundled-skills/vue3-migration/split-reference-transition.test.ts","bundled-skills/vue3-migration/split-router-contract.test.ts","bundled-skills/vue3-migration/split-routing.test.ts","bundled-skills/vue3-migration/split-self-contained.test.ts","bundled-skills/vue3-migration/split-tier-guidance.test.ts","bundled-skills/vue3-migration/split-transition-pointers.test.ts","check-llm-server.sh","connect_mcpapi.cmd","connect_mcpapi.js","connect_mcpapi.sh","default-NJH.md","default-settings.json","demo/.gitignore","demo/njh-demo-api/package.json","demo/njh-demo-api/README.md","demo/njh-demo-api/SCENARIOS.md","demo/njh-demo-api/server.js","demo/njh-demo-api/uploads/welcome.log","demo/njh-demo-convert/abc.vue","demo/njh-demo-convert/SCENARIOS.md","demo/njh-demo-convert/wless/wlessUsageDailyCret.py","demo/njh-demo-convert/wlessUsageDailyCretJob.py","demo/njh-demo-depgraph/app/order_api.py","demo/njh-demo-depgraph/customer/customer_policy.py","demo/njh-demo-depgraph/expected-output/이력기록-예시.md","demo/njh-demo-depgraph/expected-output/DEPENDENCY_GRAPH.md","demo/njh-demo-depgraph/expected-output/dependency-graph.html","demo/njh-demo-depgraph/inventory/inventory_service.py","demo/njh-demo-depgraph/order/order_service.py","demo/njh-demo-depgraph/README.md","demo/njh-demo-depgraph/SCENARIOS.md","demo/njh-demo-depgraph/settlement/settlement_service.py","demo/njh-demo-depgraph/shared/domain_model.py","demo/njh-demo-docs/raw/결제_장애_0701.log","demo/njh-demo-docs/raw/결제_취소_이중처리.log","demo/njh-demo-docs/raw/결제_한도_초과_이슈.log","demo/njh-demo-docs/raw/로그인_소셜_연동.log","demo/njh-demo-docs/raw/로그인_실패율_급증.log","demo/njh-demo-docs/raw/로그인_이슈_추적.log","demo/njh-demo-docs/raw/사양변경_결제화면.log","demo/njh-demo-docs/raw/알림_중복발송_원인분석.log","demo/njh-demo-docs/raw/알림서버_점검_회의.log","demo/njh-demo-docs/raw/야간배치_스케줄_변경.log","demo/njh-demo-docs/raw/인프라_점검_random.log","demo/njh-demo-docs/raw/주간회의_0706.log","demo/njh-demo-docs/raw/회의록_긴급_0702.log","demo/njh-demo-docs/raw/auth-2fa-rollout.log","demo/njh-demo-docs/raw/auth-service-spec-memo.log","demo/njh-demo-docs/raw/auth-token-expiry-notes.log","demo/njh-demo-docs/raw/batch-데이터_정합성.log","demo/njh-demo-docs/raw/batch-정산-지연.log","demo/njh-demo-docs/raw/batch-job-error-dump.log","demo/njh-demo-docs/raw/batch-retry-policy.log","demo/njh-demo-docs/raw/db-connection-pool-issue.log","demo/njh-demo-docs/raw/demo-node-deploy-log-scrap.log","demo/njh-demo-docs/raw/incident-0710-mixed.log","demo/njh-demo-docs/raw/incident-20260703-notify.log","demo/njh-demo-docs/raw/meeting-notes-payment-2026.log","demo/njh-demo-docs/raw/misc-logs-tail.log","demo/njh-demo-docs/raw/monthly-close-batch.log","demo/njh-demo-docs/raw/notify-server-scaling.log","demo/njh-demo-docs/raw/notify-template-변경.log","demo/njh-demo-docs/raw/ops-oncall-handover.log","demo/njh-demo-docs/raw/payment-gateway-timeout.log","demo/njh-demo-docs/raw/payment-refund-bug.log","demo/njh-demo-docs/raw/PG_연동_변경사항.log","demo/njh-demo-docs/raw/postmortem-draft-payment.log","demo/njh-demo-docs/raw/push-token-cleanup.log","demo/njh-demo-docs/raw/scratch-메모-이것저것.log","demo/njh-demo-docs/raw/sms-발송_실패.log","demo/njh-demo-docs/raw/sso-migration-memo.log","demo/njh-demo-docs/raw/system-ops-random-notes.log","demo/njh-demo-docs/raw/TODO_결제팀.log","demo/njh-demo-docs/raw/TODO_backlog_mixed.log","demo/njh-demo-docs/raw/weekly-sync-0713.log","demo/njh-demo-docs/README.md","demo/njh-demo-docs/SCENARIOS.md","demo/njh-demo-playbook.html","demo/njh-demo-vue-migration/app.js","demo/njh-demo-vue-migration/index.html","demo/njh-demo-vue-migration/README.md","demo/njh-demo-vue-migration/SCENARIOS.md","demo/njh-demo-vue-migration/serve.js","demo/njh-demo-vue-migration/vendor/vue2.global.js","demo/njh-demo-vue-migration/vendor/vue3.global.js","demo/README.md","dist/njh-cli.js","docs/로컬LLM-임베딩OCR-슬라이드.html","docs/로컬LLM-통합-운영문서.html","docs/사용자/01-빠른-시작.md","docs/사용자/02-설치-및-업데이트.md","docs/사용자/03-기본-사용법.md","docs/사용자/04-문제-해결.md","docs/사용자/05-배포-번들-검증.md","docs/사용자/06-인증서-문제-해결.md","docs/사용자/06-post-import-first-30-minutes.md","docs/사용자/게이트-연결-테스트.md","docs/사용자/릴리스노트-v1.5.409.md","docs/사용자/릴리스노트-v1.5.548.md","docs/사용자/설치가이드.html","docs/사용자/통합-설치가이드.html","docs/사용자/devai-연동조사.md","docs/사용자/devai-연동조사.ps1","docs/사용자/devai-조사.sh","docs/사용자/index.html","docs/사용자/nexus-라이브러리-조사.md","docs/사용자/nexus-라이브러리-조사.ps1","docs/사용자/nexus-라이브러리-조사.sh","docs/사용자/TUI-시연-가이드.md","docs/타겟점검-AI-고도화-검토보고.html","docs/폐쇄망-배포-운영-가이드.md","docs/canonical-import-kit-recipient-acceptance.md","docs/codi-playground-prompt-main.md","docs/codi-playground-prompt-mini.md","docs/field-verification-체크리스트.md","docs/import-guide.md","docs/measurements/recipient-original-v1-semantic-oracle.md","docs/merge-hub-recovery.md","docs/njh-cli-도입검토-발표.html","docs/njh-cli-소개-발표-amber.html","docs/njh-cli-소개-발표-cyan.html","docs/njh-cli-소개-발표-violet.html","docs/njh-cli-소개-발표.html","docs/njh-cli-통합문서.html","docs/ollama-prompt-cache-operations.md","docs/presentation/captures-2026-08-02/00-full-session.png","docs/presentation/captures-2026-08-02/01-natural-request.png","docs/presentation/captures-2026-08-02/02-source-discovery.png","docs/presentation/captures-2026-08-02/03-approval-diff.png","docs/presentation/captures-2026-08-02/04-final-summary.png","docs/presentation/captures-2026-08-02/05-result-file.png","docs/presentation/captures-2026-08-02/06-pk-impact-analysis.png","docs/presentation/captures-2026-08-02/del_yn-01-request.png","docs/presentation/captures-2026-08-02/del_yn-02-read-context.png","docs/presentation/captures-2026-08-02/del_yn-03-approval-diff.png","docs/presentation/captures-2026-08-02/del_yn-04-result.png","docs/presentation/captures-2026-08-02/pk-impact-analysis.png","docs/presentation/captures/01-request-input.png","docs/presentation/captures/02-tool-call.png","docs/presentation/captures/03-result-summary.png","docs/presentation/captures/04-file-created.png","docs/presentation/captures/05-open-result.png","docs/presentation/captures/06-completion-report.png","docs/presentation/njh-2slide-ppt2013-safe.html","docs/presentation/njh-2slide-rich.html","docs/presentation/njh-2slide-static.html","docs/presentation/njh-2slide-v2.pptx","docs/presentation/njh-slide1-v2.pptx","docs/skill-selection.md","docs/tools-reference/backend-portability-verification.md","docs/tools-reference/connection-profiles.md","docs/tools-reference/consolidate-merge.md","docs/tools-reference/delete_file.md","docs/tools-reference/describe_tool.md","docs/tools-reference/diff_apply.md","docs/tools-reference/edit_file.md","docs/tools-reference/http_request.md","docs/tools-reference/list_directory.md","docs/tools-reference/load_skill.md","docs/tools-reference/make_directory.md","docs/tools-reference/memory_get.md","docs/tools-reference/memory_search.md","docs/tools-reference/njh-api-doctor.md","docs/tools-reference/read_file.md","docs/tools-reference/read_json_schema.md","docs/tools-reference/read_symbol.md","docs/tools-reference/request_user_input.md","docs/tools-reference/run_command.md","docs/tools-reference/search_files.md","docs/tools-reference/search_grep.md","docs/tools-reference/search_replace.md","docs/tools-reference/sql_query.md","docs/tools-reference/stat_path.md","docs/tools-reference/tool_search.md","docs/tools-reference/verify-gateway-upgrade.md","docs/tools-reference/write_file.md","docs/unified-gateway-client-setup.md","docs/USER_SETTINGS.md","njh","njh.cmd","njh.ps1","package.json","README.md","representative-task-readiness.json","scripts/create-windows-shortcut.ps1","scripts/create-windows-shortcut.sh","scripts/field-verification/field-verification.env.example.invalid","scripts/field-verification/run-field-verification.sh","scripts/fixtures/recipient-measurement/original-multirule-expected-v1.json","scripts/fixtures/recipient-measurement/original-multirule-prompt-v1.txt","scripts/fixtures/recipient-measurement/original-multirule-source-v1.json","scripts/install-bundled-skills.mjs","scripts/local-llm-import/diagnose-model.sh","scripts/local-llm-import/lib/runner-profile.sh","scripts/local-llm-import/ollama-memwatch.sh","scripts/local-llm-import/ollama-start.sh","scripts/local-llm-import/ollama-status.sh","scripts/local-llm-import/ollama-stop.sh","scripts/local-llm-import/setup-backend.sh","scripts/local-llm-import/setup-model.sh","scripts/merge-terminal-config.cjs","scripts/merge-terminal-config.sh","scripts/njh-api-doctor.cmd","scripts/njh-api-doctor.mjs","scripts/njh-api-doctor.sh","scripts/njh-connect-doctor.cmd","scripts/njh-connect-doctor.mjs","scripts/njh-connect-doctor.sh","scripts/njh-settings-json-diagnosis.mjs","scripts/njh-toolcall-doctor.sh","scripts/recipient-original-v1-semantic-oracle.mjs","scripts/restore-terminal-config.sh","settings-mcpapi.example.json","settings-unified-gateway.example.json","setup.cmd","setup.ps1","setup.sh"],"archiveRootLayoutVerified":true,"archiveManifestVerified":true,"archiveExclusionsVerified":true,"archiveLauncherInstallerVerified":true,"archiveCliExecuted":true,"archiveCliVersion":"1.5.548","archiveCliBytes":2272697,"archiveSha256":"247e1a2eaa9d201ef272e1771cee03d78e772a58ccf97bc24e44055b5c597180","archiveBytes":19826674,"archiveEntryCount":455,"archiveUncompressedBytes":34733434,"archiveListedSuccessfully":true,"previousArchive":null,"previousEntryCount":null,"previousUncompressedBytes":null}

stderr:
    (empty)

### Run C5 recipient archive gate

Command: `npx --no-install tsx scripts/verify-c5-recipient-archive.ts /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-cli-v1.5.548.7z`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-cli-v1.5.548.7z","version":"1.5.548","extractedFileCount":455,"supportedShells":["bash","zsh"],"unsupportedShell":"fish","guideDocumentCount":68}

stderr:
    (empty)

### Build Gateway archive

Command: `npx --no-install tsx scripts/build-gateway-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-gateway-v1.5.548.7z --json`
Exit status: `0`

stdout:
    {"version":"1.5.548","out":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-gateway-v1.5.548.7z","fileCount":89,"files":["설치가이드-통합.html","통합-설치가이드.html","backend-kit/cleanup-legacy.sh","backend-kit/diagnose-model.sh","backend-kit/gemma4-12b-model-manifest.json","backend-kit/ollama-memwatch.sh","backend-kit/ollama-model-residency-operations.md","backend-kit/ollama-start.sh","backend-kit/ollama-status.sh","backend-kit/ollama-stop.sh","backend-kit/qwen2.5-coder-7b-model-manifest.json","backend-kit/runner-profile.sh","backend-kit/setup-backend.sh","backend-kit/setup-model.sh","bootstrap-import.sh","db-query.sh","diagnostics/admit-ollama-model.mjs","diagnostics/apply-embed-migrations.mjs","diagnostics/check-from-pc.sh","diagnostics/check-store-integrity.mjs","diagnostics/collect-logs.sh","diagnostics/diagnose.sh","diagnostics/diagnostic-helpers.sh","diagnostics/e2e-gap1-policy.cjs","diagnostics/e2e-smoke.sh","diagnostics/gateway-3node-loadtest.md","diagnostics/gateway-3node-loadtest.mjs","diagnostics/measure-ap-embed-envelope.mjs","diagnostics/measure-ap-readiness.mjs","diagnostics/measure-gateway.mjs","diagnostics/migrations/001-cm-embed-schema.sql","diagnostics/redact-diagnostics.cjs","diagnostics/rehearse-embed-gateway-loopback.mjs","diagnostics/snapshot-native-store-integrity.mjs","diagnostics/trusted-receipt-smoke.mjs","docs/설치-원페이지.md","docs/embedding-gateway.md","docs/field-operations-guide.md","docs/FIELD-TEST-CHECKLIST.md","docs/README.md","embed-gateway-smoke.sh","gateway-build.json","host-capacity-preflight.sh","import-guide.md","import-model-store.mjs","import-model-store.sh","install-all.sh","install-node-runtime.sh","match/client/concurrency-gate.mjs","match/client/contract.schema.json","match/client/match_records.mjs","match/client/mcp-server.mjs","match/client/schema-validator.mjs","match/docs/match-service-operations.md","match/ops/diagnose-match-gateway.sh","match/ops/match-gateway.env.example","match/ops/match-pipeline-schema-map.example.invalid","match/ops/njh-custom-tool-match_records.example.json","match/ops/njh-settings-mcp.example.json","match/ops/start-match-gateway.sh","match/ops/stop-match-gateway.sh","match/runtime/njh-match-gateway.js","node-runtime/node-linux-arm64.tar.gz","node-runtime/node-linux-x64.tar.gz","node-runtime/SHA256SUMS","ocr-gateway-smoke.sh","ops/deploy-guide.json","ops/deploy.sh","ops/restart.sh","ops/start.sh","ops/status.sh","ops/stop.sh","ops/unload-idle-ollama-models.mjs","ops/verify-upgrade.mjs","ops/with-user-bashrc-env.sh","quick-install.sh","runtime/embed-gateway-settings.example.json","runtime/njh-cli.js","runtime/njh-embed-gateway.js","runtime/njh-gateway.js","runtime/njh-ocr-gateway.js","runtime/ocr-gateway-settings.example.json","runtime/settings.example.json","setup-embed-gateway.sh","setup-gateway.sh","setup-ocr-engine.sh","setup-ocr-gateway.sh","site.env.example","synthetic-application-form.png"],"modes":{"설치가이드-통합.html":420,"통합-설치가이드.html":420,"backend-kit/cleanup-legacy.sh":493,"backend-kit/diagnose-model.sh":493,"backend-kit/gemma4-12b-model-manifest.json":420,"backend-kit/ollama-memwatch.sh":493,"backend-kit/ollama-model-residency-operations.md":420,"backend-kit/ollama-start.sh":493,"backend-kit/ollama-status.sh":493,"backend-kit/ollama-stop.sh":493,"backend-kit/qwen2.5-coder-7b-model-manifest.json":420,"backend-kit/runner-profile.sh":420,"backend-kit/setup-backend.sh":493,"backend-kit/setup-model.sh":493,"bootstrap-import.sh":493,"db-query.sh":493,"diagnostics/admit-ollama-model.mjs":493,"diagnostics/apply-embed-migrations.mjs":493,"diagnostics/check-from-pc.sh":493,"diagnostics/check-store-integrity.mjs":493,"diagnostics/collect-logs.sh":493,"diagnostics/diagnose.sh":493,"diagnostics/diagnostic-helpers.sh":420,"diagnostics/e2e-gap1-policy.cjs":420,"diagnostics/e2e-smoke.sh":493,"diagnostics/gateway-3node-loadtest.md":420,"diagnostics/gateway-3node-loadtest.mjs":493,"diagnostics/measure-ap-embed-envelope.mjs":493,"diagnostics/measure-ap-readiness.mjs":493,"diagnostics/measure-gateway.mjs":493,"diagnostics/migrations/001-cm-embed-schema.sql":420,"diagnostics/redact-diagnostics.cjs":420,"diagnostics/rehearse-embed-gateway-loopback.mjs":493,"diagnostics/snapshot-native-store-integrity.mjs":493,"diagnostics/trusted-receipt-smoke.mjs":493,"docs/설치-원페이지.md":420,"docs/embedding-gateway.md":420,"docs/field-operations-guide.md":420,"docs/FIELD-TEST-CHECKLIST.md":420,"docs/README.md":420,"embed-gateway-smoke.sh":493,"gateway-build.json":420,"host-capacity-preflight.sh":493,"import-guide.md":420,"import-model-store.mjs":493,"import-model-store.sh":493,"install-all.sh":493,"install-node-runtime.sh":493,"match/client/concurrency-gate.mjs":420,"match/client/contract.schema.json":420,"match/client/match_records.mjs":493,"match/client/mcp-server.mjs":493,"match/client/schema-validator.mjs":420,"match/docs/match-service-operations.md":420,"match/ops/diagnose-match-gateway.sh":493,"match/ops/match-gateway.env.example":420,"match/ops/match-pipeline-schema-map.example.invalid":420,"match/ops/njh-custom-tool-match_records.example.json":420,"match/ops/njh-settings-mcp.example.json":420,"match/ops/start-match-gateway.sh":493,"match/ops/stop-match-gateway.sh":493,"match/runtime/njh-match-gateway.js":493,"node-runtime/node-linux-arm64.tar.gz":420,"node-runtime/node-linux-x64.tar.gz":420,"node-runtime/SHA256SUMS":420,"ocr-gateway-smoke.sh":493,"ops/deploy-guide.json":420,"ops/deploy.sh":493,"ops/restart.sh":493,"ops/start.sh":493,"ops/status.sh":493,"ops/stop.sh":493,"ops/unload-idle-ollama-models.mjs":493,"ops/verify-upgrade.mjs":493,"ops/with-user-bashrc-env.sh":493,"quick-install.sh":493,"runtime/embed-gateway-settings.example.json":420,"runtime/njh-cli.js":493,"runtime/njh-embed-gateway.js":493,"runtime/njh-gateway.js":493,"runtime/njh-ocr-gateway.js":493,"runtime/ocr-gateway-settings.example.json":420,"runtime/settings.example.json":420,"setup-embed-gateway.sh":493,"setup-gateway.sh":493,"setup-ocr-engine.sh":493,"setup-ocr-gateway.sh":493,"site.env.example":420,"synthetic-application-form.png":420},"contentManifestSha256":"cbc546d0b5bbc56dd161b808031859342c96533098b68652e5be9b787c0eba5c","serverImportArtifact":"njh-gateway-v1.5.548.tar.gz","serverImportSha256":"e46879f3d587aca8cc19e9e6757c3bf3fa73421643287a7b1aa0fa6e5b83d6b3","serverImportBytes":89663164,"outerFileCount":1,"outerFiles":["njh-gateway-v1.5.548.tar.gz"],"archiveSha256":"32c9397a54ac7a3e3eb814fb71f19ed505b224be38c4ef6d1719940a96a1ca7a","archiveBytes":89133283,"distBannerVersion":"1.5.548","distFreshnessChecked":true,"buildArtifactSourceManifestSha256":"c05f4e8d4004dec413ffad825154e6469cc4687db688a06f86bcd2c95a3044e6","buildArtifactManifestSha256":"1ef7b0e8f6e860ea7df7d295bf6d6cac72b3c270b51d52f0c3ba5a299e356c17","shippedRuntimeManifestSha256":"198fb9dfc62499c30a254dc605b66a46bcf9c94806433f73a0082c65a2c8b7e1","latestBuildInputPath":"package-lock.json","latestBuildInputMtimeMs":1788229034418.8838,"distMtimeMs":1788229055407.7407}

stderr:
    (empty)

### Run Gateway recipient archive gate

Command: `npx --no-install tsx scripts/verify-c5-recipient-archive.ts --gateway /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-gateway-v1.5.548.7z`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-gateway-v1.5.548.7z","version":"1.5.548","extractedFileCount":89,"outerFileCount":1,"documentFileCountClaims":7}

stderr:
    (empty)

### Build Windows laptop archive

Command: `npx --no-install tsx scripts/build-windows-laptop-archive.ts --out /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-win-laptop-v1.5.548.7z --json`
Exit status: `0`

stdout:
    {
      "archivePath": "/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-win-laptop-v1.5.548.7z",
      "files": [
        "통합-설치가이드.html",
        "default-NJH.md",
        "default-settings.json",
        "gateway-ollama-settings.example.json",
        "import-model-store.mjs",
        "import-model-store.sh",
        "laptop-guide.html",
        "local-ollama-NJH.md",
        "local-ollama-settings.json",
        "measure-igpu-ab.sh",
        "measure-laptop.sh",
        "njh-cli.js",
        "optimize-laptop-memory.sh",
        "README.md",
        "recorded-ollama-generate.json",
        "recorded-ollama-tags.json",
        "setup-local-llm.sh",
        "start-local-llm.sh",
        "stress-gpu-limit.sh",
        "tune-gpu-ctx.sh",
        "upgrade-ollama.sh",
        "verify-local-llm.sh"
      ],
      "totalBytes": 3448606,
      "buildArtifactIdentity": {
        "schemaVersion": 1,
        "sourceInputManifestSha256": "c05f4e8d4004dec413ffad825154e6469cc4687db688a06f86bcd2c95a3044e6",
        "artifactManifestSha256": "1ef7b0e8f6e860ea7df7d295bf6d6cac72b3c270b51d52f0c3ba5a299e356c17",
        "shippedRuntimeManifestSha256": "53c6f9a87f2856750e72da04f9fb06121893d35e36dd16d344d71d1de6618253",
        "artifacts": [
          {
            "archivePath": "njh-cli.js",
            "bytes": 2272697,
            "sha256": "fb954f9bbb131ba0cd3a3ead987a2ab7d39c43fcadab46c224ebe1e8b58b2801"
          }
        ]
      },
      "version": "1.5.548"
    }

stderr:
    (empty)

### Run Windows laptop recipient archive gate

Command: `npx --no-install tsx scripts/verify-laptop-recipient-archive.ts /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-win-laptop-v1.5.548.7z --manifest /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/laptop-build.json`
Exit status: `0`

stdout:
    {"archivePath":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/njh-win-laptop-v1.5.548.7z","extractedFileCount":22,"buildArtifactSourceManifestSha256":"c05f4e8d4004dec413ffad825154e6469cc4687db688a06f86bcd2c95a3044e6","buildArtifactManifestSha256":"1ef7b0e8f6e860ea7df7d295bf6d6cac72b3c270b51d52f0c3ba5a299e356c17","shippedRuntimeManifestSha256":"53c6f9a87f2856750e72da04f9fb06121893d35e36dd16d344d71d1de6618253","shippedCliBytes":2272697,"shippedCliSha256":"fb954f9bbb131ba0cd3a3ead987a2ab7d39c43fcadab46c224ebe1e8b58b2801"}

stderr:
    (empty)

### Run automatic package safety gate

Command: `npx --no-install tsx scripts/verify-release-package-safety.ts --package-dir /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f --report /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/package-build-evidence.md --version 1.5.548 --out /Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/safety-gate.json --json`
Exit status: `0`

stdout:
    {"schema_version":1,"status":"pass","report":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f/package-build-evidence.md","package_directory":"/Users/nam64/njh-kits/package-pickup-2026-09-01-v1.5.548-2ab1309dea9e96d25108fe8913ce792cdb6a3a1f","version":"1.5.548","packages":[{"kind":"cli","status":"pass","artifact":"njh-cli-v1.5.548.7z","version":"1.5.548","expected_sha256":"247e1a2eaa9d201ef272e1771cee03d78e772a58ccf97bc24e44055b5c597180","actual_sha256":"247e1a2eaa9d201ef272e1771cee03d78e772a58ccf97bc24e44055b5c597180","expected_bytes":19826674,"actual_bytes":19826674,"version_markers":{"dist/njh-cli.js":"1.5.548"},"scanned_text_files":429,"scanned_text_bytes":9106256,"scanned_binary_files":26,"leak_hits":0},{"kind":"gateway","status":"pass","artifact":"njh-gateway-v1.5.548.7z","version":"1.5.548","expected_sha256":"32c9397a54ac7a3e3eb814fb71f19ed505b224be38c4ef6d1719940a96a1ca7a","actual_sha256":"32c9397a54ac7a3e3eb814fb71f19ed505b224be38c4ef6d1719940a96a1ca7a","expected_bytes":89133283,"actual_bytes":89133283,"version_markers":{"runtime/njh-cli.js":"1.5.548","runtime/njh-gateway.js":"1.5.548"},"scanned_text_files":172,"scanned_text_bytes":10948302,"scanned_binary_files":7,"leak_hits":0},{"kind":"win-laptop","status":"pass","artifact":"njh-win-laptop-v1.5.548.7z","version":"1.5.548","expected_sha256":"63f59192924381e258f7085a127802694f188c77f8c0ce11c158fb00e6066c60","actual_sha256":"63f59192924381e258f7085a127802694f188c77f8c0ce11c158fb00e6066c60","expected_bytes":1923904,"actual_bytes":1923904,"version_markers":{"njh-cli.js":"1.5.548"},"scanned_text_files":22,"scanned_text_bytes":3448606,"scanned_binary_files":0,"leak_hits":0}]}

stderr:
    (empty)
